newclay/test/Compiler/Propagation/Fail/RvalueInNonLoopExit1/main.clay

eatRvalue(rvalue x) {}

main() {
    rvalue x = 3;

    while (true) {
        eatRvalue(x);
        continue;
    }
}
